<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>launch_nodes</name>
  <version>0.1.0</version>
  <description>
      A simple package for launching the ROS nodes needed to have
      2 way communication with the hydralisk plug-in host
  </description>
  <maintainer email="bjones@relativityspace.com">bjones-local</maintainer>
  <license>XXX</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>rmw_zenoh_cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
